<resources>
    <string name="app_name">MyActivityDemo</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="brandline">Dreams Dont Work Unless You Do</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="login">Sign in</string>
    <string name="checkbox">Keep me signed in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
